[package]
name = "taskrunner"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[dependencies]
futures = "0.3.1"

juniper = { git = "https://github.com/graphql-rust/juniper", features = ["chrono"] }
hyper = { version = "0.14.2", features = ["server", "http1", "http2", "tcp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
url = "2"
thiserror = "1.0.23"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
juniper_subscriptions = { git = "https://github.com/graphql-rust/juniper" }
tokio-tungstenite = "0.13.0"
base64 = "0.13.0"
sha-1 = "0.9.2"
async-stream = "0.3.0"
juniper_relay = { git = "https://github.com/alvskar/juniper-relay" }
once_cell = "1.5.2"
chrono = "0.4.19"
tokio-stream = "0.1.3"
